--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "github": "https://github.com/marionettejs/backbone.marionette",
   "dependencies": {
+    "underscore": ">=1.4.4",
     "backbone.babysitter": "~0.0.6",
     "backbone.wreqr": "~0.2.0",
     "backbone": "~1.0.0"
