--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ node_js:
 notifications:
   irc: "irc.freenode.net#marionette"
 before_script:
-  - npm install -g grunt-cli bower
-  - bower install
+  - npm run-script bower
