--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - "0.8"
 notifications:
   irc: "irc.freenode.net#marionette"
+before_install:
+  - npm update npm -g
 before_script:
   - npm install -g grunt-cli bower
   - bower install
