Update jshint and add nonbsp

--- a/.jshintrc
+++ b/.jshintrc
@@ -24,6 +24,7 @@
   "newcap"        : true,
   "noarg"         : true,
   "noempty"       : true,
+  "nonbsp"        : true,
   "nonew"         : true,
   "plusplus"      : false,
   "quotmark"      : "single",
