Add missing options & opt for lower maxdepth

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,6 +17,7 @@
   "camelcase"     : true,
   "curly"         : true,
   "eqeqeq"        : true,
+  "es3"           : true,
   "forin"         : true,
   "immed"         : true,
   "indent"        : 2,
@@ -33,7 +34,7 @@
   "strict"        : false,
   "trailing"      : true,
   "maxparams"     : 4,
-  "maxdepth"      : 3,
+  "maxdepth"      : 2,
   "maxstatements" : 12,
   "maxcomplexity" : 6,
   "maxlen"        : 100,
@@ -54,6 +55,7 @@
   "loopfunc"      : false,
   "maxerr"        : 10000,
   "multistr"      : false,
+  "notypeof"      : false,
   "proto"         : false,
   "regexdash"     : false,
   "scripturl"     : false,
@@ -62,6 +64,7 @@
   "sub"           : false,
   "supernew"      : false,
   "validthis"     : false,
+  "noyield"       : false,
 
   "browser"       : true,
   "couch"         : false,
