--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "bower": "1.2.8",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-preprocess": "~4.0.0"
+    "grunt-preprocess": "~4.0.0",
+    "grunt-bower-task": "~0.3.4"
   },
   "volo": {
     "url": "https://raw.github.com/marionettejs/backbone.marionette/v{version}/lib/core/amd/backbone.marionette.js",
