--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-preprocess": "~4.0.0",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-template": "^0.2.3"
   }
 }
