add grunt coverage task to generate html report

--- a/package.json
+++ b/package.json
@@ -58,9 +58,12 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-connect": "^0.1.2",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.1",
+    "grunt-istanbul": "^0.3.0",
     "grunt-karma": "^0.8.3",
     "grunt-lintspaces": "^0.4.1",
     "grunt-mocha-test": "^0.10.2",
@@ -72,6 +75,7 @@
     "karma": "^0.12.16",
     "karma-browserifast": "^0.6.1",
     "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.4",
     "karma-mocha": "^0.1.3",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "0.3.0",
