--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   ],
   "scripts": {
     "bower": "bower install",
-    "test": "grunt test --mocha-reporter=dot"
+    "test": "grunt test --mocha-reporter=dot",
+    "coverage": "grunt coverage"
   },
   "author": {
     "name": "Derick Bailey",
@@ -65,6 +66,7 @@
     "grunt-env": "^0.4.1",
     "grunt-istanbul": "^0.3.0",
     "grunt-karma": "^0.8.3",
+    "grunt-karma-coveralls": "^2.5.1",
     "grunt-lintspaces": "^0.4.1",
     "grunt-mocha-test": "^0.10.2",
     "grunt-plato": "~0.1.4",
