--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "grunt-env": "^0.4.1",
     "grunt-istanbul": "^0.3.0",
     "grunt-karma": "^0.8.3",
+    "grunt-karma-coveralls": "^2.5.1",
     "grunt-lintspaces": "^0.4.1",
     "grunt-mocha-test": "^0.10.2",
     "grunt-plato": "~0.1.4",
