add nyan to karma

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "bower": "bower install",
-    "test": "grunt test --mocha-reporter=dot",
+    "test": "grunt test --mocha-reporter=dots",
     "coverage": "grunt coverage"
   },
   "author": {
@@ -79,6 +79,7 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-coverage": "^0.2.4",
     "karma-mocha": "^0.1.3",
+    "karma-nyan-reporter": "0.0.41",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "0.3.0",
     "mocha": "^1.19.0",
