Add jsDocFiles build tool

--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "mocha": "^1.19.0",
     "sinon": "^1.9.1",
     "sinon-chai": "^2.5.0",
-    "unwrap": "^0.1.0"
+    "unwrap": "^0.1.0",
+    "dox": "^0.4",
+    "js-yaml": "^3.1.0"
   }
 }
