--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "sinon-chai": "^2.5.0",
     "unwrap": "^0.1.0",
     "dox": "^0.4",
-    "js-yaml": "^3.1.0"
+    "js-yaml": "^3.1.0",
+    "marked": "^0.3"
   }
 }
